# oxidising-ocelots

./: .gitignore  Dockerfile
backend/: CMakeLists.txt  build.sh  cmake_install.cmake
backend/include/: api.hpp  card.hpp  player.hpp  state_machine.hpp
backend/src/: api.cpp  cards.cpp  initials.cpp  main.cpp  player.cpp  random.cpp  rng.hpp  state.cpp  state.cpp.autosave
base-img/: Dockerfile
frontend-flask/: (macOS)debug.mode server copy.command  (macOS)debug.mode server.command  OcelotManager.py  server.py
frontend-flask/BackendBinary/: oxidising-ocelots-backend
frontend-flask/static/: base.html  faq.html
frontend-flask/templates/: CreateRoom.html  Home.html  base.html  faq.html  room.html
frontend-flask/templates/layout/: layout.html
